Fix some minor layout issues with Matrix combinations

--- a/src/resources/src/scss/_input.scss
+++ b/src/resources/src/scss/_input.scss
@@ -188,6 +188,15 @@
     padding-right: 5px;
 }
 
+// More layout fixes for Matrix
+.superTableContainer .matrix-field .buttons {
+    margin: 0;
+}
+
+.superTableContainer .matrix-field {
+    padding: 6px 0;
+}
+
 
 
 
